# searxngr

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  searxngr.py
demo/: Makefile  demo.tape
searxngr/: __init__.py  cli.py  client.py  config.py  console.py  constants.py  engines.py  formatter.py  interactive.py  searxngr.py
tests/: test_cli_parsers.py  test_cli_utils.py  test_config.py  test_constants.py  test_interactive.py  test_search_results.py  test_searxng_client.py
