[project]
name = "searxngr"
dynamic = ["version"]
description = "SearXNG from the terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "xdg-base-dirs>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/scross01/searxngr"
Issues = "https://github.com/scross01/searxngr/issues"

[project.scripts]
searxngr = "searxngr:main"

[tool.hatch.version]
path = "searxngr/__version__.py"