[project]
name = "searxngr"
dynamic = ["version"]
description = "SearXNG from the terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "babel>=2.17.0",
    "bs4>=0.0.2",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.51",
    "pyperclip>=1.9.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.0.0",
    "xdg-base-dirs>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/scross01/searxngr"
Issues = "https://github.com/scross01/searxngr/issues"

[project.scripts]
searxngr = "searxngr:main"

[tool.hatch.version]
path = "searxngr/__version__.py"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
]
